--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-with-mongodb-api-example",
+  "name": "api-herois",
   "version": "1.0.0",
   "description": "<img src=https://i.imgur.com/eDNZeqh.png alt='Swagger Page of that application' title='Swagger Page of that application'/>",
   "main": "index.js",
